# AI-DEVS-TOOLS-ZOOMCAMP

./: .gitignore  README.md  implementation.md
01-todo-app-django/: .dockerignore  .env.example  .gitignore  API_GUIDE.md  CHANGES.md  DATE_PICKER_GUIDE.md  Dockerfile  ENV_GUIDE.md  FEATURE_SUMMARY.md  FINAL_SUMMARY.md  GRAPHQL_GUIDE.md  MAKEFILE_GUIDE.md  MARKDOWN_GUIDE.md  Makefile  PROJECT_SUMMARY.md  README.md  create_superuser.py  docker-compose.yml  exercise.md  implementation-plan.md  pyproject.toml  pytest.ini
01-todo-app-django/bucket-list/: bucketlist-app-plan.md
01-todo-app-django/static/css/: style.css
01-todo-app-django/templates/: base.html  home.html  todo_confirm_delete.html  todo_form.html
01-todo-app-django/todo/: admin.py  forms.py  models.py  urls.py  views.py
01-todo-app-django/todo/api/: __init__.py  serializers.py  urls.py  views.py
01-todo-app-django/todo/graphql/: __init__.py  mutations.py  queries.py  schema.py  types.py  urls.py
01-todo-app-django/todo/migrations/: 0001_initial.py
01-todo-app-django/todo/templatetags/: markdown_extras.py
01-todo-app-django/todo/tests/: test_api.py  test_graphql.py  test_markdown.py  test_models.py  test_templates.py  test_urls.py  test_views.py
01-todo-app-django/todo_project/: settings.py  urls.py
03-mcp/mcp-ai-dev-workflow/code/: context7_claude.md
03-mcp/mcp-ai-dev-workflow/code/0-mcp-demo/stdio/: stdio_server.py
03-mcp/mcp-ai-dev-workflow/pets-api/: .env.example  .flake8  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
03-mcp/mcp-ai-dev-workflow/pets-api/docker/backend/: Dockerfile
03-mcp/mcp-ai-dev-workflow/pets-api/docs/: API_DOCUMENTATION.md  CODE_QUALITY.md  CONTEXT7_MCP_GUIDE.md  CONTEXT7_QUICK_REFERENCE.md  DJANGO_LOGGING_GUIDE.md  IMPLEMENTATION_PLAN.md  PYTEST_GUIDE.md  QUICK_START.md
03-mcp/mcp-ai-dev-workflow/pets-api/fixtures/: .gitkeep  README.md  sample_categories_tags.json
03-mcp/mcp-ai-dev-workflow/pets-api/postman/: Petstore_API.postman_collection.json
03-mcp/mcp-ai-dev-workflow/pets-api/src/: conftest.py
03-mcp/mcp-ai-dev-workflow/pets-api/src/common/: env_settings.py  pydantic_models.py
03-mcp/mcp-ai-dev-workflow/pets-api/src/config/: admin.py  urls.py
03-mcp/mcp-ai-dev-workflow/pets-api/src/config/settings/: __init__.py  base.py  development.py  production.py  test.py
03-mcp/mcp-ai-dev-workflow/pets-api/src/pets/: admin.py  models.py  serializers.py  urls.py  views.py
03-mcp/mcp-ai-dev-workflow/pets-api/src/pets/migrations/: 0001_initial.py
03-mcp/mcp-ai-dev-workflow/pets-api/src/pets/tests/: test_admin.py  test_models.py  test_views.py
03-mcp/mcp-ai-dev-workflow/pets-api/src/store/: admin.py  models.py  serializers.py  urls.py  views.py
03-mcp/mcp-ai-dev-workflow/pets-api/src/store/migrations/: 0001_initial.py  0002_initial.py
03-mcp/mcp-ai-dev-workflow/pets-api/src/store/tests/: test_admin.py  test_models.py  test_views.py
03-mcp/mcp-ai-dev-workflow/pets-api/src/users/: admin.py  models.py  serializers.py  urls.py  views.py
03-mcp/mcp-ai-dev-workflow/pets-api/src/users/migrations/: 0001_initial.py
03-mcp/mcp-ai-dev-workflow/pets-api/src/users/tests/: test_admin.py  test_models.py  test_views.py
snake-game/: README.md  package-lock.json  package.json
snake-game-claude/: DEPLOYMENT-QUICK-START.md  DEPLOYMENT.md  README.md  package-lock.json  package.json
snake-game-claude/.github/workflows/: README.md  deploy-aws.yml  deploy-github-pages.yml  deploy-vercel.yml
snake-game-claude/src/: App.css  App.jsx  index.css
snake-game-claude/src/components/: Controls.css  Controls.jsx  GameBoard.css  GameBoard.jsx  GameBoard.test.jsx  HUD.css  HUD.jsx  HUD.test.jsx
snake-game-claude/src/hooks/: useKeyboardControls.js  useSnakeGame.js  useSnakeGame.test.js
snake-game-claude/src/utils/: coordinateHelpers.js  coordinateHelpers.test.js  gameConfig.js  sounds.js  storage.js
snake-game/.github/workflows/: deploy.yml
snake-game/src/: App.css  App.tsx  index.css
snake-game/src/components/: DirectionPad.tsx  GameBoard.tsx  index.ts
snake-game/src/hooks/: index.ts  useSnakeGame.test.tsx  useSnakeGame.ts
snake-game/src/utils/: board.test.ts  board.ts
