[project]
name = "todo-app"
version = "0.1.0"
description = "Django TODO application with PostgreSQL"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "pytest>=7.4",
    "pytest-django>=4.7",
    "pytest-cov>=4.1",
    "markdown>=3.5",
    "djangorestframework>=3.14",
    "drf-spectacular>=0.27",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "todo_project.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--cov=todo --cov-report=html --cov-report=term-missing"
